# crypto-benchmark

./: .gitmodules  README.md  benchmark-history.json  benchmark.js  chart-renderer.js  index.html  package-lock.json  package.json
.github/workflows/: benchmarks.yml  update-readme.js
bench/: libsodium.js  noble.js  node-native-crypto.js  rust-signal.js  rust.js  web-crypto.js  zig.js
gh-pages-src/: chart-renderer.js  index.html
src-rust/: Cargo.toml
src-rust-signal/: Cargo.toml
src-rust-signal/src/: lib.rs
src-rust/src/: lib.rs
src-zig/: lib.zig  xed25519.zig
