[package]
name = "src-rust-signal"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
libsignal-core = { path = "../../libsignal/rust/core" }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand = "0.9.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
