[package]
name = "crypto_benchmark_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
sha2 = "0.10.9"
wasm-bindgen = "0.2.100"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
